@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the FINAL CUT widget toolkit                    *
 *                                                                      *
-* Copyright 2018-2022 Markus Gans                                      *
+* Copyright 2018-2023 Markus Gans                                      *
 *                                                                      *
 * FINAL CUT is free software; you can redistribute it and/or modify    *
 * it under the terms of the GNU Lesser General Public License as       *
@@ -159,6 +159,17 @@ void FTermXTerminal::setMouseSupport (bool enable)
     enableXTermMouse();
   else
     disableXTermMouse();
+}
+
+//----------------------------------------------------------------------
+void FTermXTerminal::setFocusSupport (bool enable)
+{
+  // activate/deactivate the terminal focus events
+
+  if ( enable )
+    enableXTermFocus();
+  else
+    disableXTermFocus();
 }
 
 //----------------------------------------------------------------------
@@ -819,6 +830,32 @@ void FTermXTerminal::disableXTermMouse()
                        CSI "?1001r");  // restore old highlight mouse tracking
   std::fflush(stdout);
   mouse_support = false;
+}
+
+//----------------------------------------------------------------------
+void FTermXTerminal::enableXTermFocus()
+{
+  // Activate terminal focus event
+
+  if ( focus_support )
+    return;  // The terminal focus event is already activated
+
+  FTerm::paddingPrint (CSI "?1004h");  // enable SGR mouse mode
+  std::fflush(stdout);
+  focus_support = true;
+}
+
+//----------------------------------------------------------------------
+void FTermXTerminal::disableXTermFocus()
+{
+  // Deactivate terminal focus event
+
+  if ( ! focus_support )
+    return;  // The terminal focus event was already deactivated
+
+  FTerm::paddingPrint (CSI "?1004l");    // disable x11 mouse tracking
+  std::fflush(stdout);
+  focus_support = false;
 }
 
 //----------------------------------------------------------------------
