@@ -2430,8 +2430,8 @@ void FVTermTest::FVTermOverlappingWindowsTest()
   CPPUNIT_ASSERT ( vwin_2->layer == 2 );
   CPPUNIT_ASSERT ( vwin_3->layer == 3 );
   CPPUNIT_ASSERT ( vwin_4->layer == 4 );
-  
-  
+
+
   CPPUNIT_ASSERT ( finalcut::FVTerm::getWindowList()->size() == 4U );
 
   // virtual desktop
