@@ -1,5 +1,8 @@
 2023-01-29  Markus Gans  <guru.mail@muenster.de>
 	* Fixed invalid iterator on post-inserting an item in FListView
+	* The application will now be notified when the focus changes in 
+	  the terminal window, through the new onTermFocusIn() and 
+	  onTermFocusOut() event methods
 
 2023-01-22  Markus Gans  <guru.mail@muenster.de>
 	* Fix focus-in and focus-out errors FComboBox and FSpinBox
